--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -317,12 +317,13 @@
  <layoutdefault spacing="6" margin="11" />
  <tabstops>
   <tabstop>Edit_Password</tabstop>
+  <tabstop>ButtonChangeEchoMode</tabstop>
   <tabstop>Edit_PasswordRep</tabstop>
   <tabstop>Combo_Dirs</tabstop>
   <tabstop>ButtonBrowse</tabstop>
   <tabstop>CheckBox_Both</tabstop>
+  <tabstop>ButtonBox</tabstop>
   <tabstop>Button_Bookmarks</tabstop>
-  <tabstop>ButtonChangeEchoMode</tabstop>
  </tabstops>
  <resources/>
  <connections/>
