--- a/src/forms/AutoTypeDlg.ui
+++ b/src/forms/AutoTypeDlg.ui
@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>502</width>
+    <width>439</width>
     <height>300</height>
    </rect>
   </property>
@@ -23,7 +23,7 @@
      </property>
      <property name="sizeHint" >
       <size>
-       <width>481</width>
+       <width>1</width>
        <height>50</height>
       </size>
      </property>
@@ -50,21 +50,9 @@
      <property name="allColumnsShowFocus" >
       <bool>true</bool>
      </property>
-     <column>
-      <property name="text" >
-       <string>Group</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Title</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Username</string>
-      </property>
-     </column>
+     <property name="columnCount" >
+      <number>0</number>
+     </property>
     </widget>
    </item>
    <item>
