Corrected some strings
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@160 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -302,7 +302,7 @@
        <item>
         <widget class="QCheckBox" name="CheckBox_AutoSave" >
          <property name="text" >
-          <string>Automatically save database on exit</string>
+          <string>Automatically save database on exit and workspace locking</string>
          </property>
         </widget>
        </item>
