--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -754,7 +754,7 @@
          <item>
           <widget class="QLabel" name="textLabel2" >
            <property name="text" >
-            <string>Seconds</string>
+            <string>seconds</string>
            </property>
           </widget>
          </item>
@@ -766,6 +766,46 @@
           <string>Lock workspace when minimizing the main window</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" >
+         <item>
+          <widget class="QCheckBox" name="CheckBox_InactivityLock" >
+           <property name="text" >
+            <string>Lock database after inactivity of</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="SpinBox_InacitivtyTime" >
+           <property name="enabled" >
+            <bool>false</bool>
+           </property>
+           <property name="sizePolicy" >
+            <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize" >
+            <size>
+             <width>80</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="maximum" >
+            <number>50000</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Inactivity" >
+           <property name="text" >
+            <string>seconds</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <spacer>
