--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -148,11 +148,7 @@
              <widget class="QLineEdit" name="Edit_Password" />
             </item>
             <item>
-             <widget class="QToolButton" name="ButtonChangeEchoMode" >
-              <property name="text" >
-               <string>...</string>
-              </property>
-             </widget>
+             <widget class="QToolButton" name="ButtonChangeEchoMode" />
             </item>
            </layout>
           </item>
