Master key transformations (rounds) are now computed in two threads (from KeePass 1.11) Added a button to measure the number of rounds that can be calculated in 1 second Don't try to open a URL when it's empty Improved code formatting
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@194 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/DatabaseSettingsDlg.ui
+++ b/src/forms/DatabaseSettingsDlg.ui
@@ -68,7 +68,27 @@
        </widget>
       </item>
       <item row="1" column="1" >
-       <widget class="QLineEdit" name="EditRounds" />
+       <layout class="QHBoxLayout" >
+        <item>
+         <widget class="QLineEdit" name="EditRounds" />
+        </item>
+        <item>
+         <widget class="QPushButton" name="ButtonBench" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="toolTip" >
+           <string>Calculate rounds for a 1-second delay on this computer</string>
+          </property>
+          <property name="text" >
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
