--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -20,18 +20,12 @@
    <bool>true</bool>
   </property>
   <layout class="QGridLayout" >
-   <property name="horizontalSpacing" >
-    <number>6</number>
-   </property>
-   <property name="verticalSpacing" >
+   <property name="spacing" >
     <number>6</number>
    </property>
    <item rowspan="2" row="5" column="1" >
     <layout class="QGridLayout" >
-     <property name="horizontalSpacing" >
-      <number>6</number>
-     </property>
-     <property name="verticalSpacing" >
+     <property name="spacing" >
       <number>6</number>
      </property>
      <item row="1" column="1" >
@@ -240,6 +234,12 @@
    </item>
    <item row="8" column="1" >
     <widget class="QTextEdit" name="Edit_Comment" >
+     <property name="minimumSize" >
+      <size>
+       <width>0</width>
+       <height>40</height>
+      </size>
+     </property>
      <property name="tabChangesFocus" >
       <bool>true</bool>
      </property>
@@ -282,7 +282,9 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset/>
+        <iconset>
+         <normaloff/>
+        </iconset>
        </property>
        <property name="iconSize" >
         <size>
@@ -298,7 +300,9 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset/>
+        <iconset>
+         <normaloff/>
+        </iconset>
        </property>
        <property name="iconSize" >
         <size>
@@ -314,7 +318,9 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset/>
+        <iconset>
+         <normaloff/>
+        </iconset>
        </property>
        <property name="iconSize" >
         <size>
@@ -424,7 +430,7 @@
        <property name="sizeType" >
         <enum>QSizePolicy::Fixed</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>100</width>
          <height>20</height>
@@ -460,7 +466,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons" >
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -472,7 +478,7 @@
      <property name="sizeType" >
       <enum>QSizePolicy::Minimum</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
        <height>50</height>
